third_party/move/move-compiler-v2/tests/bytecode-generator/v1-commands/continue_outside_loop_in_if.exp
// -- Model dump before bytecode pipeline
module <SELF>_0 {
    private fun main() {
        if true {
          continue
        } else {
          Tuple()
        };
        Tuple()
    }
} // end <SELF>_0


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/bytecode-generator/v1-commands/continue_outside_loop_in_if.move:3:15
  │
3 │     if (true) continue;
  │               ^^^^^^^^
